force-app/main/default/objects/Contact_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Retry_API_Callout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can be used to re-trigger any API callouts</description>
        <label>Retry API Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reunion_Year__c</fullName>
        <description>This is a year of graduation of the cohort with whom the person wants to be affiliated with.</description>
        <label>Reunion Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Managing/owning) school of the qualification (for university degrees).
Note: relevant for Monash Tertiary Education only.</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Qualifications (School)</relationshipLabel>
        <relationshipName>Contact_Qualifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Score</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solo_or_Group_Exhibition__c</fullName>
        <description>Solo or Group Exhibition for music type</description>
        <label>Solo or Group Exhibition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOLO</fullName>
                    <label>Solo</label>
                </value>
                <value>
                    <fullName>GROUP</fullName>
                    <label>Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Channel__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Source of qualification they are verified from. Populated by system via API or
        Apex. For English - IELTS, Pearson, PTE
        or manual. Read only for users in layout.</description>
        <label>Source Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IELTS</fullName>
                </value>
                <value>
                    <fullName>PEARSON</fullName>
                    <label>Pearson</label>
                </value>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaking__c</fullName>
        <description>Stores speaking score</description>
        <inlineHelpText>Stores speaking score</inlineHelpText>
        <label>Speaking</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_of_Award__c</fullName>
        <description>Standing number of Award</description>
        <label>Standing of Award</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>The state or province of applicants which are not Australia based.</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Australian_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Level of Completion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATTEMPTED BUT WAS NOT COMPLETED</fullName>
                </value>
                <value>
                    <fullName>CURRENTLY STUDYING</fullName>
                </value>
                <value>
                    <fullName>DISCONTINUED</fullName>
                </value>
                <value>
                    <fullName>SUCCESSFULLY COMPLETED AND OBTAINED</fullName>
                </value>
                <value>
                    <fullName>Completed Alternative Exit</fullName>
                    <isActive>false</isActive>
                    <label>Completed Alternative Exit</label>
                </value>
                <value>
                    <fullName>Completed not graduated</fullName>
                    <isActive>false</isActive>
                    <label>Completed not graduated</label>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                    <isActive>false</isActive>
                    <label>Graduated</label>
                </value>
                <value>
                    <fullName>Graduated but no Grad Date in Callista</fullName>
                    <isActive>false</isActive>
                    <label>Graduated but no Grad Date in Callista</label>
                </value>
                <value>
                    <fullName>Study Abroad/CIC</fullName>
                    <isActive>false</isActive>
                    <label>Study Abroad/CIC</label>
                </value>
                <value>
                    <fullName>WILL BE COMPLETED BY ADMISSION</fullName>
                    <isActive>false</isActive>
                    <label>WILL BE COMPLETED BY ADMISSION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Code__c</fullName>
        <label>Subject Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Name_Description__c</fullName>
        <label>Subject Name/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Result_Score__c</fullName>
        <label>Subject Result/Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Qualification__c</fullName>
        <description>Track assessment flow status for contact qualification post application submit</description>
        <label>Task: Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Reason_Qualification__c</fullName>
        <description>Task Trigger Reason for Qualification</description>
        <inlineHelpText>Task Trigger Reason for Qualification</inlineHelpText>
        <label>Task Reason: Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Task_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <description>Tenure of employment</description>
        <label>Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ET-PTLT10</fullName>
                    <label>Part time - less than 10 hours per week</label>
                </value>
                <value>
                    <fullName>ET-PT</fullName>
                    <label>Part time - 10 or more hours per week</label>
                </value>
                <value>
                    <fullName>ET-FT</fullName>
                    <label>Full time</label>
                </value>
                <value>
                    <fullName>ET-UNPAID</fullName>
                    <label>Unpaid work</label>
                </value>
                <value>
                    <fullName>ET-CASUAL</fullName>
                    <label>Casual work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tertiary_Qualification_Level__c</fullName>
        <description>This field is for the admissions team to record a more tertiary qualification level that is more granular than the AQF Levels. The field will record a level of qualification as interpreted by Monash according to multiple external sources.</description>
        <label>Qualification Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADV-CERT</fullName>
                    <label>Advanced Certificate</label>
                </value>
                <value>
                    <fullName>ADV-DIP</fullName>
                    <label>Advanced Diploma</label>
                </value>
                <value>
                    <fullName>APPRENT-TC</fullName>
                    <label>Apprenticeship Trade Certificate</label>
                </value>
                <value>
                    <fullName>ASSOC-DIP</fullName>
                    <label>Associate Diploma</label>
                </value>
                <value>
                    <fullName>BACHELOR</fullName>
                    <label>Bachelor Degree</label>
                </value>
                <value>
                    <fullName>BACH-HONS</fullName>
                    <label>Bachelors Honours</label>
                </value>
                <value>
                    <fullName>CERTIFICAT</fullName>
                    <label>Certificate Course (Not Advanced Certificate)</label>
                </value>
                <value>
                    <fullName>DIPLOMA</fullName>
                    <label>Diploma</label>
                </value>
                <value>
                    <fullName>GRAD-CERT</fullName>
                    <label>Graduate Certificate</label>
                </value>
                <value>
                    <fullName>GRAD-DIP</fullName>
                    <label>Graduate Diploma</label>
                </value>
                <value>
                    <fullName>HIGH-DIP</fullName>
                    <label>Higher Diploma</label>
                </value>
                <value>
                    <fullName>HIGHER-DOC</fullName>
                    <label>Higher Doctorate</label>
                </value>
                <value>
                    <fullName>HOSP NUR</fullName>
                    <label>Hospital Based Nursing</label>
                </value>
                <value>
                    <fullName>MASTER-CW</fullName>
                    <label>Masters Degree by Coursework</label>
                </value>
                <value>
                    <fullName>MASTER-RES</fullName>
                    <label>Masters Degree by Research</label>
                </value>
                <value>
                    <fullName>MONCOL-DIP</fullName>
                    <label>Monash College Diploma</label>
                </value>
                <value>
                    <fullName>OPEN LEARN</fullName>
                    <label>Open Learning</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other Tertiary Studies</label>
                </value>
                <value>
                    <fullName>PHD</fullName>
                    <label>PhD (Doctor of Philosophy)</label>
                </value>
                <value>
                    <fullName>POST-DIP</fullName>
                    <label>Postgraduate Diploma</label>
                </value>
                <value>
                    <fullName>SHORT CRS</fullName>
                    <label>Short Course</label>
                </value>
                <value>
                    <fullName>TAFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_of_Written_English__c</fullName>
        <description>Stores Written English score</description>
        <inlineHelpText>Stores Written English score</inlineHelpText>
        <label>Test of Written English</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testamur_Type__c</fullName>
        <description>This field captures testamur type</description>
        <label>Testamur Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thesis_Title__c</fullName>
        <label>Thesis Title</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The Qualificaiton Title</description>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Publication_Work_Chapter_Paper__c</fullName>
        <description>Title of Publication/Work/Chapter/Paper</description>
        <label>Title of Publication/Work/Chapter/Paper</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Description__c</fullName>
        <description>Transfer Research/Project Description for research qualification</description>
        <label>Transfer Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Qualificaiton Type</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_publisher__c</fullName>
        <description>Type of publisher</description>
        <label>Type of publisher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CR-SELF</fullName>
                    <label>Self</label>
                </value>
                <value>
                    <fullName>CR-CMRCL</fullName>
                    <label>Recognisable commercial publisher</label>
                </value>
                <value>
                    <fullName>CR-ONLINE</fullName>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>CR-PUB-NA</fullName>
                    <label>Not Applicable / Not Published</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Accredited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USA Accredited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <description>The unique external id for Contact Qualification Object</description>
        <externalId>true</externalId>
        <label>Unique_External_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Default is UNKNOWN. If an external verification is done for that qualification, assessors update this field.While exchanging information with Callista, values will be as follows: Verified = VERIFIED, Unknown = UNKNOWN, Invalid OR Expired OR Unverified = UNVERIFIED</description>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Score Verified</fullName>
                </value>
                <value>
                    <fullName>Fraudulent</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Word_Length__c</fullName>
        <description>Word length of book</description>
        <label>Word length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Writing__c</fullName>
        <description>Stores writing score</description>
        <inlineHelpText>Stores writing score</inlineHelpText>
        <label>Writing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion__c</fullName>
        <description>This field will appear as a picklist on the frontend</description>
        <inlineHelpText>Format is &apos;YYYY&apos;</inlineHelpText>
        <label>Year of Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1965</fullName>
                </value>
                <value>
                    <fullName>1966</fullName>
                </value>
                <value>
                    <fullName>1967</fullName>
                </value>
                <value>
                    <fullName>1968</fullName>
                </value>
                <value>
                    <fullName>1969</fullName>
                </value>
                <value>
                    <fullName>1970</fullName>
                </value>
                <value>
                    <fullName>1971</fullName>
                </value>
                <value>
                    <fullName>1972</fullName>
                </value>
                <value>
                    <fullName>1973</fullName>
                </value>
                <value>
                    <fullName>1974</fullName>
                </value>
                <value>
                    <fullName>1975</fullName>
                </value>
                <value>
                    <fullName>1976</fullName>
                </value>
                <value>
                    <fullName>1977</fullName>
                </value>
                <value>
                    <fullName>1978</fullName>
                </value>
                <value>
                    <fullName>1979</fullName>
                </value>
                <value>
                    <fullName>1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>deleted_on_source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the qualification is currently active</description>
        <label>Deleted on Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTestCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualification Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Other_Qualification__c</columns>
        <columns>Qualification_Name__c</columns>
        <columns>Testamur_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Retry_API_Callout__c</columns>
        <columns>API_Callout_Successful__c</columns>
        <columns>API_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Monash_Verified</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Qualification_Name__c</columns>
        <columns>Qualification_Code__c</columns>
        <columns>Testamur_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Last_Year_Enrolled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verification_Status__c</field>
            <operation>equals</operation>
            <value>Verified</value>
        </filters>
        <label>All Monash (Verified)</label>
    </listViews>
    <nameField>
        <displayFormat>CNQL-{000000}</displayFormat>
        <label>Contact Qualification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Awards_and_Scholarships</fullName>
        <active>true</active>
        <description>Awards, prizes and Scholarships</description>
        <label>Awards, Prizes and Scholarships</label>
    </recordTypes>
    <recordTypes>
        <fullName>Creative_Works</fullName>
        <active>true</active>
        <description>Creative Writing</description>
        <label>Creative Works</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_and_Research</fullName>
        <active>true</active>
        <description>Employment and Research Experience</description>
        <label>Employment and Research Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>English_Test</fullName>
        <active>true</active>
        <label>English Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exhibitions</fullName>
        <active>true</active>
        <description>Exhibitions</description>
        <label>Exhibitions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Music</fullName>
        <active>true</active>
        <description>Music qualifications</description>
        <label>Music</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Qualification</fullName>
        <active>true</active>
        <label>Other Qualification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Publications</fullName>
        <active>true</active>
        <label>Publications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referees</fullName>
        <active>true</active>
        <label>Referees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secondary_Education</fullName>
        <active>true</active>
        <label>Secondary Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tertiary_Education</fullName>
        <active>true</active>
        <label>Tertiary Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Theatre_Performance</fullName>
        <active>true</active>
        <label>Theatre Performance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Name_and_Title_char_limit_on_Publication</fullName>
        <active>true</active>
        <description>Name and Title char limit on Publications</description>
        <errorConditionFormula>IF(
    AND(RecordType.Name == &apos;Publications&apos;, AND(LEN(Name_of_Publisher_Journal_Org__c) &lt;= 500, LEN(Title_of_Publication_Work_Chapter_Paper__c) &lt;= 500)), 
    false,
	(IF
		(
			AND(RecordType.Name != &apos;Publications&apos;, AND(LEN(Name_of_Publisher_Journal_Org__c) &lt;= 200, LEN(Title_of_Publication_Work_Chapter_Paper__c) &lt;= 200)),
			false,
			IF(NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c), true, false)
		)
	)
)</errorConditionFormula>
        <errorMessage>characters limit for Name of Publisher/Journal/Org and Title of Publication/Work/Chapter/Paper is 500 for Publications and 200 for other types</errorMessage>
    </validationRules>
</CustomObject>